--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^3.13.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "handlebars": "^4.7.7",
     "nodemailer": "^6.7.5"
   }
 }
