--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "feedback-widget",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --setupFiles dotenv/config",
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev src/server.ts"
@@ -17,7 +17,8 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.0",
-    "@types/node": "^17.0.31",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^17.0.45",
     "@types/nodemailer": "^6.4.4",
     "jest": "^28.0.3",
     "prisma": "^3.13.0",
@@ -27,9 +28,12 @@
   },
   "dependencies": {
     "@prisma/client": "^3.13.0",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "handlebars": "^4.7.7",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.5"
   }
 }
